# change

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh
.cache/clangd/index/: ai.cpp.1B3D10DFE8B7264A.idx  ai.cpp.85237D834B69E1B9.idx  ai.cpp.FB48BD1BCCC4A27C.idx  ai.hpp.503F3FB44D7A6C36.idx  ai.hpp.B689AC05D4177A9E.idx  brain.cpp.EEE9C1DC136AC161.idx  brain.hpp.3E9B1DE2C691B7AD.idx  main.cpp.78390AE612818B20.idx
include/: ai.cpp  ai.hpp  brain.cpp  brain.hpp  goal.cpp  goal.hpp  menu.cpp  menu.hpp  utils.cpp  utils.hpp
src/: main.cpp
